[package]
name = "ravenna"
version = "0.1.0"
authors = ["Galen Palmer <palmergs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.5.13", features = ["serialization"] }
specs = { version = "0.15.1", features = ["serde"] }
specs-derive = "0.4.0"
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
